hs-bindgen/examples/failing/array_res_6.h
typedef int matrix[4][3];
//! A (multi-dimensional) array (of known size) can not be the return type of a function
matrix fun_6(int x);